# uniclaw

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  package-lock.json  package.json
RFCS/: 0001-receipt-format.md
constitutions/: solo-dev.toml
crates/boardproof-approval/: Cargo.toml
crates/boardproof-approval/src/: lib.rs
crates/boardproof-budget/: Cargo.toml
crates/boardproof-budget/src/: lib.rs
crates/boardproof-budget/tests/: composition.rs
crates/boardproof-constitution/: Cargo.toml
crates/boardproof-constitution/src/: evaluator.rs  lib.rs  parse.rs  rule.rs  verdict.rs
crates/boardproof-constitution/tests/: solo_dev.rs
crates/boardproof-explain/: Cargo.toml
crates/boardproof-explain/src/: lib.rs  main.rs  render.rs
crates/boardproof-explain/tests/: cli.rs
crates/boardproof-host/: Cargo.toml
crates/boardproof-host/examples/: end-to-end-demo.rs
crates/boardproof-host/src/: api.rs  clock.rs  lib.rs  signer.rs  verify.html
crates/boardproof-host/tests/: api.rs
crates/boardproof-kernel/: Cargo.toml
crates/boardproof-kernel/src/: event.rs  kernel.rs  leaf.rs  lib.rs  outcome.rs  state.rs  traits.rs
crates/boardproof-kernel/tests/: chain.rs
crates/boardproof-receipt/: Cargo.toml
crates/boardproof-receipt/src/: canonical.rs  lib.rs
crates/boardproof-receipt/tests/: vectors.rs
crates/boardproof-receipt/tests/vectors/: canonical-v2.json  conformance-smoke.mjs
crates/boardproof-redact/: Cargo.toml
crates/boardproof-redact/src/: lib.rs  pattern.rs  redactor.rs  stack.rs
crates/boardproof-router/: Cargo.toml
crates/boardproof-router/src/: cli.rs  lib.rs  orchestrate.rs  router.rs
crates/boardproof-router/tests/: round_trip.rs
crates/boardproof-secrets/: Cargo.toml
crates/boardproof-secrets/src/: broker.rs  env.rs  lib.rs  value.rs
crates/boardproof-sleep/: Cargo.toml
crates/boardproof-sleep/src/: lib.rs
crates/boardproof-store/: Cargo.toml
crates/boardproof-store-sqlite/: Cargo.toml
crates/boardproof-store-sqlite/src/: lib.rs
crates/boardproof-store/src/: lib.rs  log.rs  memory.rs
crates/boardproof-store/tests/: integration.rs
crates/boardproof-tools/: Cargo.toml
crates/boardproof-tools-http/: Cargo.toml
crates/boardproof-tools-http/src/: config.rs  envelope.rs  lib.rs  ssrf.rs
crates/boardproof-tools-http/tests/: integration.rs
crates/boardproof-tools-wasm/: Cargo.toml
crates/boardproof-tools-wasm/src/: config.rs  error.rs  host.rs  lib.rs  limits.rs  tool.rs
crates/boardproof-tools-wasm/tests/: host_imports.rs  runtime.rs
crates/boardproof-tools-wasm/tests/fixtures/: echo-component.wasm  http-tool-component.wasm
crates/boardproof-tools-wasm/tests/fixtures/echo-component/: BUILD.md  Cargo.toml
crates/boardproof-tools-wasm/tests/fixtures/echo-component/src/: lib.rs
crates/boardproof-tools-wasm/tests/fixtures/echo-component/wit/: tool.wit
crates/boardproof-tools-wasm/tests/fixtures/http-tool-component/: BUILD.md  Cargo.toml
crates/boardproof-tools-wasm/tests/fixtures/http-tool-component/src/: lib.rs
crates/boardproof-tools-wasm/tests/fixtures/http-tool-component/wit/: tool.wit
crates/boardproof-tools-wasm/wit/: tool.wit
crates/boardproof-tools/src/: capability.rs  host.rs  lib.rs  noop.rs  tool.rs
crates/boardproof-verify/: Cargo.toml
crates/boardproof-verify/examples/: mint-sample.rs
crates/boardproof-verify/src/: main.rs
crates/boardproof-verify/tests/: round_trip.rs
crates/uniclaw-budget/src/: error.rs
crates/uniclaw-host/src/: api.rs  clock.rs  lib.rs  verify.html
crates/uniclaw-host/tests/: api.rs
crates/uniclaw-kernel/: Cargo.toml
crates/uniclaw-kernel/src/: event.rs  kernel.rs  lib.rs
crates/uniclaw-kernel/tests/: chain.rs
crates/uniclaw-receipt/src/: canonical.rs  lib.rs
crates/uniclaw-receipt/tests/: vectors.rs
crates/uniclaw-receipt/tests/vectors/: canonical-v2.json  conformance-smoke.mjs
crates/uniclaw-redact/: Cargo.toml
crates/uniclaw-redact/src/: lib.rs  pattern.rs  redactor.rs  stack.rs
crates/uniclaw-secrets/: Cargo.toml
crates/uniclaw-secrets/src/: env.rs  lib.rs  memory.rs  value.rs
crates/uniclaw-tools-http/: Cargo.toml
crates/uniclaw-tools-http/src/: config.rs  envelope.rs  lib.rs
crates/uniclaw-tools-http/tests/: integration.rs
crates/uniclaw-tools-wasm/: Cargo.toml
crates/uniclaw-tools-wasm/src/: bindings.rs  config.rs  error.rs  lib.rs  limits.rs  tool.rs
crates/uniclaw-tools-wasm/tests/: runtime.rs
crates/uniclaw-tools-wasm/tests/fixtures/: echo-component.wasm
crates/uniclaw-tools-wasm/tests/fixtures/echo-component/: BUILD.md  Cargo.toml
crates/uniclaw-tools-wasm/tests/fixtures/echo-component/src/: lib.rs
crates/uniclaw-tools-wasm/tests/fixtures/echo-component/wit/: tool.wit
crates/uniclaw-tools-wasm/wit/: tool.wit
crates/uniclaw-tools/src/: lib.rs  noop.rs  tool.rs
docs/: 01-what-is-boardproof.md  01-what-is-uniclaw.md  02-boardproof-vs-openclaw.md  03-roadmap.md  README.md
docs/steps/: 00-foundation-receipts.md  01-kernel-state-machine.md  02-constitution-engine.md  03-capability-budgets.md  04-receipt-explainer.md  05-approval-engine.md  06-channel-aware-routing.md  07-receipt-store.md  08-light-sleep.md  09-public-url-hosting.md  10-sqlite-receipt-store.md  11-deep-sleep.md  12-html-verifier.md  13-tool-foundation.md  14-http-fetch-tool.md  15-secret-broker.md  16-wasm-tool-runtime-skeleton.md  16b-wasm-component-model.md  16c-wasm-host-imports.md  18-output-sanitization.md  19-receipt-canonicalization.md  19a-key-id-field.md  20-end-to-end-demo.md  20a-typescript-verifier.md  21-http-proposal-api.md  22-typescript-client.md  23-tool-execution-api.md  24-python-client.md  25-bearer-token-auth.md  26-proposal-mode-persistence.md  27-publish-clients.md
