[workspace]
resolver = "2"
members = [
    "crates/uniclaw-receipt",
    "crates/uniclaw-verify",
    "crates/uniclaw-kernel",
    "crates/uniclaw-constitution",
    "crates/uniclaw-budget",
    "crates/uniclaw-explain",
    "crates/uniclaw-approval",
    "crates/uniclaw-router",
    "crates/uniclaw-store",
    "crates/uniclaw-sleep",
    "crates/uniclaw-host",
    "crates/uniclaw-store-sqlite",
    "crates/uniclaw-tools",
    "crates/uniclaw-tools-http",
    "crates/uniclaw-secrets",
    "crates/uniclaw-tools-wasm",
    "crates/uniclaw-redact",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.95"
authors = ["Uniclaw Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/uniclaw/uniclaw"
homepage = "https://uniclaw.dev"
readme = "README.md"
keywords = ["agent", "ai", "verifiable", "wasm", "security"]
categories = ["command-line-utilities", "cryptography"]

[workspace.dependencies]
# Crypto + encoding (kept tiny — verifier must stay ≤ 200 LOC equivalent).
blake3 = { version = "1.5", default-features = false }
ed25519-dalek = { version = "2.1", default-features = false, features = ["std", "fast"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }

# CLI for uniclaw-verify.
clap = { version = "4.5", default-features = false, features = ["std", "help", "usage", "error-context", "derive"] }
anyhow = { version = "1.0", default-features = false, features = ["std"] }

# Web stack — used only by uniclaw-host.
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "macros", "fs", "io-util", "signal", "sync"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-http = { version = "0.6", default-features = false, features = ["cors"] }

# SQLite-backed ReceiptLog — used only by uniclaw-store-sqlite (and any
# binaries that opt into persistence). `bundled` statically links SQLite so
# there's no system dependency; cost is ~1 MB binary size on the host crate.
rusqlite = { version = "0.32", default-features = false, features = ["bundled"] }

# Zeroize secret bytes on drop — used by uniclaw-secrets.
# Tiny, audited, no_std-friendly. Provides a guarantee the compiler
# doesn't optimize the zeroing away (which it can do for plain loops
# clearing memory that's about to be deallocated).
zeroize = { version = "1.8", default-features = false, features = ["alloc"] }

# HTTP client + URL parsing + base64 — used only by uniclaw-tools-http.
# `ureq` is a synchronous HTTP client (matches the sync `Tool::call` trait);
# `rustls` keeps TLS in pure Rust. `url` parses URLs robustly (including
# IPv6-in-brackets and IDN). `base64` encodes response bodies for the
# JSON envelope.
ureq = { version = "2.10", default-features = false, features = ["tls"] }
url = { version = "2.5", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

# WebAssembly runtime — used only by uniclaw-tools-wasm.
# `wasmtime` is the reference AOT-compiling WASM runtime with stable
# Component Model support. Default features include the Cranelift
# compiler, the JIT runtime, and component-model bindings — all of
# which we want, so no trimming for now.
# `wasmtime-wasi` provides host-side stubs for the WASI imports that
# any non-`no_std` Rust→WASM Component picks up automatically (the
# Rust standard library declares `wasi:cli/environment` and friends
# whether the program touches them or not). 16b's Component fixture
# never *uses* WASI — but it has to *import* it for std to link, and
# without a registered impl wasmtime refuses to instantiate. We add
# `add_to_linker_sync` once on each Component-Model call's linker to
# satisfy the import shape; nothing reaches a real WASI syscall in 16b.
# `wat` is dev-only — compiles the human-readable WebAssembly Text
# format to wasm bytes — used by tests so fixtures stay readable.
wasmtime = "44"
wasmtime-wasi = "44"
wat = "1"

# Regular expressions — used only by uniclaw-redact for compiled
# pattern matching against tool-output bytes. Standard, fast,
# well-tested. Brings ~2 MB of source deps; trimmed binary
# contribution is small (<100 KB stripped). For v0 we accept
# the dep weight; future-step optimisation could swap to a
# hand-rolled state machine for ASCII-prefix patterns if the
# weight becomes a real constraint.
# `unicode-perl` is what makes `\b`/`\d`/`\w` work even on ASCII
# inputs (without it the regex compiler refuses these classes).
# We need them for the credential-prefix patterns. Defaults pull
# in the full unicode tables (~1 MB binary contribution); the
# v0 acceptance is "credentials are ASCII; default features keep
# the patterns simple to write." A future tuning could trim by
# switching to `regex::bytes::Regex` and rewriting the patterns
# without word-class shorthands.
regex = "1.10"

# Internal members.
uniclaw-receipt = { path = "crates/uniclaw-receipt", version = "0.0.1" }
uniclaw-kernel = { path = "crates/uniclaw-kernel", version = "0.0.1" }
uniclaw-constitution = { path = "crates/uniclaw-constitution", version = "0.0.1" }
uniclaw-budget = { path = "crates/uniclaw-budget", version = "0.0.1" }
uniclaw-explain = { path = "crates/uniclaw-explain", version = "0.0.1" }
uniclaw-approval = { path = "crates/uniclaw-approval", version = "0.0.1" }
uniclaw-router = { path = "crates/uniclaw-router", version = "0.0.1" }
uniclaw-store = { path = "crates/uniclaw-store", version = "0.0.1" }
uniclaw-sleep = { path = "crates/uniclaw-sleep", version = "0.0.1" }
uniclaw-host = { path = "crates/uniclaw-host", version = "0.0.1" }
uniclaw-store-sqlite = { path = "crates/uniclaw-store-sqlite", version = "0.0.1" }
uniclaw-tools = { path = "crates/uniclaw-tools", version = "0.0.1" }
uniclaw-tools-http = { path = "crates/uniclaw-tools-http", version = "0.0.1" }
uniclaw-secrets = { path = "crates/uniclaw-secrets", version = "0.0.1" }
uniclaw-tools-wasm = { path = "crates/uniclaw-tools-wasm", version = "0.0.1" }
uniclaw-redact = { path = "crates/uniclaw-redact", version = "0.0.1" }

# --- Lints (apply to every workspace member) ---
[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic exceptions that are noise rather than signal.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# --- Profiles ---
# Pattern adopted from ZeroClaw — engineered for size and edge hardware.
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# Crypto deps must compile with full optimization or Ed25519 verify slows ~30x.
# (Size discipline still applies to our own crates and most deps.)
[profile.release.package.ed25519-dalek]
opt-level = 3

[profile.release.package.curve25519-dalek]
opt-level = 3

[profile.release.package.sha2]
opt-level = 3

[profile.release.package.blake3]
opt-level = 3

# SQLite + libsqlite3-sys must be fully optimized or queries slow ~5-10x.
[profile.release.package.rusqlite]
opt-level = 3

[profile.release.package.libsqlite3-sys]
opt-level = 3

# Faster builds for development without sacrificing release discipline.
[profile.release-fast]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 16

# Reproducible distribution build.
[profile.dist]
inherits = "release"
debug = false
incremental = false

# Faster CI — thin LTO is fast enough.
[profile.ci]
inherits = "release"
lto = "thin"
codegen-units = 8
