[workspace]
resolver = "2"
members = [
    "crates/boardproof-receipt",
    "crates/boardproof-verify",
    "crates/boardproof-kernel",
    "crates/boardproof-constitution",
    "crates/boardproof-budget",
    "crates/boardproof-explain",
    "crates/boardproof-approval",
    "crates/boardproof-router",
    "crates/boardproof-store",
    "crates/boardproof-sleep",
    "crates/boardproof-host",
    "crates/boardproof-store-sqlite",
    "crates/boardproof-tools",
    "crates/boardproof-tools-http",
    "crates/boardproof-secrets",
    "crates/boardproof-tools-wasm",
    "crates/boardproof-redact",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.95"
authors = ["BoardProof Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BoardClaw-Labs/BoardProof"
homepage = "https://github.com/BoardClaw-Labs/BoardProof"
readme = "README.md"
keywords = ["agent", "ai", "verifiable", "wasm", "security"]
categories = ["command-line-utilities", "cryptography"]

[workspace.dependencies]
# Crypto + encoding (kept tiny — verifier must stay ≤ 200 LOC equivalent).
blake3 = { version = "1.5", default-features = false }
ed25519-dalek = { version = "2.1", default-features = false, features = ["std", "fast"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }

# CLI for boardproof-verify.
clap = { version = "4.5", default-features = false, features = ["std", "help", "usage", "error-context", "derive"] }
anyhow = { version = "1.0", default-features = false, features = ["std"] }

# Web stack — used only by boardproof-host.
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "macros", "fs", "io-util", "signal", "sync"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-http = { version = "0.6", default-features = false, features = ["cors"] }

# SQLite-backed ReceiptLog — used only by boardproof-store-sqlite (and any
# binaries that opt into persistence). `bundled` statically links SQLite so
# there's no system dependency; cost is ~1 MB binary size on the host crate.
rusqlite = { version = "0.32", default-features = false, features = ["bundled"] }

# Zeroize secret bytes on drop — used by boardproof-secrets.
# Tiny, audited, no_std-friendly. Provides a guarantee the compiler
# doesn't optimize the zeroing away (which it can do for plain loops
# clearing memory that's about to be deallocated).
zeroize = { version = "1.8", default-features = false, features = ["alloc"] }

# HTTP client + URL parsing + base64 — used only by boardproof-tools-http.
# `ureq` is a synchronous HTTP client (matches the sync `Tool::call` trait);
# `rustls` keeps TLS in pure Rust. `url` parses URLs robustly (including
# IPv6-in-brackets and IDN). `base64` encodes response bodies for the
# JSON envelope.
ureq = { version = "2.10", default-features = false, features = ["tls"] }
url = { version = "2.5", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

# WebAssembly runtime — used only by boardproof-tools-wasm.
# `wasmtime` is the reference AOT-compiling WASM runtime with stable
# Component Model support. Default features include the Cranelift
# compiler, the JIT runtime, and component-model bindings — all of
# which we want, so no trimming for now.
# `wasmtime-wasi` provides host-side stubs for the WASI imports that
# any non-`no_std` Rust→WASM Component picks up automatically (the
# Rust standard library declares `wasi:cli/environment` and friends
# whether the program touches them or not). 16b's Component fixture
# never *uses* WASI — but it has to *import* it for std to link, and
# without a registered impl wasmtime refuses to instantiate. We add
# `add_to_linker_sync` once on each Component-Model call's linker to
# satisfy the import shape; nothing reaches a real WASI syscall in 16b.
# `wat` is dev-only — compiles the human-readable WebAssembly Text
# format to wasm bytes — used by tests so fixtures stay readable.
wasmtime = "44"
wasmtime-wasi = "44"
wat = "1"

# Regular expressions — used only by boardproof-redact for compiled
# pattern matching against tool-output bytes. Standard, fast,
# well-tested. Brings ~2 MB of source deps; trimmed binary
# contribution is small (<100 KB stripped). For v0 we accept
# the dep weight; future-step optimisation could swap to a
# hand-rolled state machine for ASCII-prefix patterns if the
# weight becomes a real constraint.
# `unicode-perl` is what makes `\b`/`\d`/`\w` work even on ASCII
# inputs (without it the regex compiler refuses these classes).
# We need them for the credential-prefix patterns. Defaults pull
# in the full unicode tables (~1 MB binary contribution); the
# v0 acceptance is "credentials are ASCII; default features keep
# the patterns simple to write." A future tuning could trim by
# switching to `regex::bytes::Regex` and rewriting the patterns
# without word-class shorthands.
regex = "1.10"

# Internal members.
boardproof-receipt = { path = "crates/boardproof-receipt", version = "0.0.1" }
boardproof-kernel = { path = "crates/boardproof-kernel", version = "0.0.1" }
boardproof-constitution = { path = "crates/boardproof-constitution", version = "0.0.1" }
boardproof-budget = { path = "crates/boardproof-budget", version = "0.0.1" }
boardproof-explain = { path = "crates/boardproof-explain", version = "0.0.1" }
boardproof-approval = { path = "crates/boardproof-approval", version = "0.0.1" }
boardproof-router = { path = "crates/boardproof-router", version = "0.0.1" }
boardproof-store = { path = "crates/boardproof-store", version = "0.0.1" }
boardproof-sleep = { path = "crates/boardproof-sleep", version = "0.0.1" }
boardproof-host = { path = "crates/boardproof-host", version = "0.0.1" }
boardproof-store-sqlite = { path = "crates/boardproof-store-sqlite", version = "0.0.1" }
boardproof-tools = { path = "crates/boardproof-tools", version = "0.0.1" }
boardproof-tools-http = { path = "crates/boardproof-tools-http", version = "0.0.1" }
boardproof-secrets = { path = "crates/boardproof-secrets", version = "0.0.1" }
boardproof-tools-wasm = { path = "crates/boardproof-tools-wasm", version = "0.0.1" }
boardproof-redact = { path = "crates/boardproof-redact", version = "0.0.1" }

# --- Lints (apply to every workspace member) ---
[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic exceptions that are noise rather than signal.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# --- Profiles ---
# Pattern adopted from ZeroClaw — engineered for size and edge hardware.
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# Crypto deps must compile with full optimization or Ed25519 verify slows ~30x.
# (Size discipline still applies to our own crates and most deps.)
[profile.release.package.ed25519-dalek]
opt-level = 3

[profile.release.package.curve25519-dalek]
opt-level = 3

[profile.release.package.sha2]
opt-level = 3

[profile.release.package.blake3]
opt-level = 3

# SQLite + libsqlite3-sys must be fully optimized or queries slow ~5-10x.
[profile.release.package.rusqlite]
opt-level = 3

[profile.release.package.libsqlite3-sys]
opt-level = 3

# Faster builds for development without sacrificing release discipline.
[profile.release-fast]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 16

# Reproducible distribution build.
[profile.dist]
inherits = "release"
debug = false
incremental = false

# Faster CI — thin LTO is fast enough.
[profile.ci]
inherits = "release"
lto = "thin"
codegen-units = 8
