[package]
name = "boardproof-store"
description = "Receipt log for BoardProof — chain-validated, issuer-pinned audit storage."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
boardproof-receipt = { workspace = true, features = ["crypto"] }

[dev-dependencies]
ed25519-dalek = { workspace = true }
serde_json.workspace = true
blake3.workspace = true

[lints]
workspace = true
