[package]
name = "uniclaw-redact"
description = "Output sanitization for Uniclaw tool outputs — pattern-based credential redaction with audit-grade RedactionReport receipts."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
uniclaw-receipt.workspace = true
regex.workspace = true
blake3.workspace = true

[lints]
workspace = true
